--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,16 +5,67 @@ driver:
   name: docker
 platforms:
   - name: dubzland-backup-client-debian9
-    image: jdubz/docker-ansible-debian9:latest
+    image: jdubz/docker-ci-debian:stretch-slim
     pre_build_image: true
+    privileged: true
     tmpfs:
       - /run
       - /run/lock
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
   - name: dubzland-backup-client-debian10
-    image: jdubz/docker-ansible-debian10:latest
+    image: jdubz/docker-ci-debian:buster-slim
     pre_build_image: true
+    privileged: true
+    tmpfs:
+      - /run
+      - /run/lock
+      - /tmp
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: dubzland-backup-client-ubuntu16.04
+    image: jdubz/docker-ci-ubuntu:xenial
+    pre_build_image: true
+    privileged: true
+    tmpfs:
+      - /run
+      - /run/lock
+      - /tmp
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: dubzland-backup-client-ubuntu18.04
+    image: jdubz/docker-ci-ubuntu:bionic
+    pre_build_image: true
+    privileged: true
+    tmpfs:
+      - /run
+      - /run/lock
+      - /tmp
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: dubzland-backup-client-ubuntu19.10
+    image: jdubz/docker-ci-ubuntu:eoan
+    pre_build_image: true
+    privileged: true
+    tmpfs:
+      - /run
+      - /run/lock
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: dubzland-backup-client-ubuntu20.04
+    image: jdubz/docker-ci-ubuntu:focal
+    pre_build_image: true
+    privileged: true
+    tmpfs:
+      - /run
+      - /run/lock
+      - /tmp
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: dubzland-backup-client-ubuntu20.10
+    image: jdubz/docker-ci-ubuntu:groovy
+    pre_build_image: true
+    privileged: true
     tmpfs:
       - /run
       - /run/lock
@@ -25,3 +76,7 @@ provisioner:
   name: ansible
 verifier:
   name: ansible
+lint: |
+  set -e
+  yamllint .
+  ansible-lint
