--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,16 @@
 [tox]
 minversion = 1.8
-envlist = {py27,py36,py37,py38}-ansible{28,29}
+envlist = {py38,py39,py310}-ansible{211,212}
 skipsdist = true
+toxworkdir={env:TOX_WORK_DIR:.tox}
 
 [testenv]
 passenv = *
 deps =
-    ansible28: ansible == 2.8
-    ansible29: ansible == 2.9
-    molecule>=3, <4
-    docker
-    ansible-lint
+	molecule[ansible,docker,lint,test]
+	ansible-lint
+	ansible211: ansible-core==2.11
+	ansible212: ansible-core==2.12
+	jinja2>=3.0.2,<3.1
 commands =
-    molecule test
+	molecule test
