--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,5 +3,5 @@
   hosts: all
   tasks:
     - name: "Include ansible-role-backup-client"
-      include_role:
-        name: "ansible-role-backup-client"
+      ansible.builtin.include_role:
+        name: dubzland.backup_client
