--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -1,6 +1,6 @@
 ---
-- name: set os-specific variables
-  include_vars: "{{ lookup('first_found', params) }}"
+- name: Set os-specific variables
+  ansible.builtin.include_vars: "{{ lookup('first_found', params) }}"
   vars:
     params:
       files:
