--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,9 @@ services:
   - name: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/docker:20.10-dind
     alias: docker
 
+variables:
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache"
+
 .molecule:
   stage: test
   cache:
@@ -14,8 +17,8 @@ services:
         - .tool-versions
         - tox.ini
     paths:
-      - .tox
       - .cache
+      - .tox
   script:
     - asdf list python
     - asdf install
