--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,17 +26,17 @@ variables:
     - ls -al
     - pwd
 
-# debian9:
-#   extends: .molecule
-#   variables:
-#     MOLECULE_PLATFORM: debian-stretch
-#     MOLECULE_IMAGE: debian:stretch-slim
+debian9:
+  extends: .molecule
+  variables:
+    MOLECULE_PLATFORM: debian-stretch
+    MOLECULE_IMAGE: debian:stretch-slim
 
-# debian10:
-#   extends: .molecule
-#   variables:
-#     MOLECULE_PLATFORM: debian-buster
-#     MOLEDULE_IMAGE: debian:buster-slim
+debian10:
+  extends: .molecule
+  variables:
+    MOLECULE_PLATFORM: debian-buster
+    MOLEDULE_IMAGE: debian:buster-slim
 
 debian11:
   extends: .molecule
@@ -44,26 +44,26 @@ debian11:
     MOLECULE_PLATFORM: debian-bullseye
     MOLEDULE_IMAGE: debian:bullseye-slim
 
-# ubuntu1404:
-#   extends: .molecule
-#   variables:
-#     MOLECULE_PLATFORM: ubuntu-trusty
-#     MOLEDULE_IMAGE: ubuntu:trusty
+ubuntu1404:
+  extends: .molecule
+  variables:
+    MOLECULE_PLATFORM: ubuntu-trusty
+    MOLEDULE_IMAGE: ubuntu:trusty
 
-# ubuntu1604:
-#   extends: .molecule
-#   variables:
-#     MOLECULE_PLATFORM: ubuntu-xenial
-#     MOLEDULE_IMAGE: ubuntu:xenial
+ubuntu1604:
+  extends: .molecule
+  variables:
+    MOLECULE_PLATFORM: ubuntu-xenial
+    MOLEDULE_IMAGE: ubuntu:xenial
 
-# ubuntu1804:
-#   extends: .molecule
-#   variables:
-#     MOLECULE_PLATFORM: ubuntu-bionic
-#     MOLEDULE_IMAGE: ubuntu:bionic
+ubuntu1804:
+  extends: .molecule
+  variables:
+    MOLECULE_PLATFORM: ubuntu-bionic
+    MOLEDULE_IMAGE: ubuntu:bionic
 
-# ubuntu2004:
-#   extends: .molecule
-#   variables:
-#     MOLECULE_PLATFORM: ubuntu-focal
-#     MOLECULE_IMAGE: ubuntu:focal
+ubuntu2004:
+  extends: .molecule
+  variables:
+    MOLECULE_PLATFORM: ubuntu-focal
+    MOLECULE_IMAGE: ubuntu:focal
