move asdf install to before_script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,9 @@ variables:
     paths:
       - .cache
       - .tox
-  script:
+  before_script:
     - asdf install
+  script:
     - tox
 
 debian9:
