--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,7 +4,7 @@ dependency:
   options:
     ignore-certs: true
     ignore-errors: true
-    requirements-file: requirements.yml
+    requirements-file: molecule/requirements.yml
 driver:
   name: docker
 platforms:
