--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,8 @@ toxworkdir={env:TOX_WORK_DIR:.tox}
 [testenv]
 passenv = *
 deps =
-	molecule[ansible,docker,lint,test]
-	ansible-lint
 	ansible211: ansible-core==2.11
 	ansible212: ansible-core==2.12
-	jinja2>=3.0.2,<3.1
+	-rtest-requirements.txt
 commands =
 	molecule test
